...
                                            </mask>
                                        </variation>
                                    </label>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2pV-ZJ-4cm" customClass="DACounterView">
                                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                        <color key="backgroundColor" red="0.98823535442352295" green="0.71764707565307617" blue="0.18823531270027161" alpha="1" colorSpace="deviceRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="studying_counter" label="studying">
                                            <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="16c-ab-lqM"/>
                                            <constraint firstAttribute="width" constant="136" id="sDK-Ss-CDv"/>
...
                                            </mask>
                                        </variation>
                                    </view>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jc9-rg-qYb" customClass="DACounterView">
                                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                        <color key="backgroundColor" red="0.42745101451873779" green="0.64313727617263794" blue="0.85490202903747559" alpha="1" colorSpace="deviceRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="studied_counter" label="studied">
                                            <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="136" id="WKp-Rh-E6N"/>
                                            <constraint firstAttribute="height" constant="40" id="hCk-Rw-9Z3"/>
...
                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZBL-VT-RP2">
                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tJM-ql-VXE">
                                        <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                        <color key="backgroundColor" red="0.4392156862745098" green="0.6588235294117647" blue="0.14901960784313725" alpha="1" colorSpace="calibratedRGB"/>
                                        <state key="normal" title="Train">
                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <action selector="learn:" destination="a9j-Pt-Vtt" eventType="touchUpInside" id="BUq-Oa-rEf"/>
                                        </connections>
                                    </button>
...
